Quick fix, with footer spacer overlapping main contents

--- a/app/assets/stylesheets/messages.css.scss
+++ b/app/assets/stylesheets/messages.css.scss
@@ -2,6 +2,8 @@
 @import 'mixins';
 
 .message-wrapper {
+  overflow: auto;
+  
   .received, .sent {
     @include span-columns(6);
   }
